bluec-tests/tests/invalid/types_float/mod_float_2.c
int main(void) {
    /* You can't apply the modulo operator to a float */
    float e =  3.0f % 5;
    return 0;
}